# obsavoid

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.md~
Relatorio/: RelatorioFCR.aux  RelatorioFCR.tex  UnBTitle.sty
Relatorio/tex/: Algoritmos.tex  Conclusao.tex  CondicoesFuncionamento.tex  Introducao.tex  Metodologia.tex  Referencias.tex
include/: VFH.h
latex/: RelatorioFCR.aux  RelatorioFCR.tex
latex/tex/: Algoritmos.tex  Metodologia.tex  Referencias.tex
launch/: gazebo.rviz  navigation.rviz
src/: VFH.cpp  obstacle_avoidance.cpp  obstacle_avoidance.cpp~
